--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "follow-redirects": "^1.10.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "node index.js",
-    "start-unsecure": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node index.js"
+    "start:watch": "nodemon index.js",
+    "start-unsecure": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 node index.js",
+    "start-unsecure:watch": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon index.js"
   },
   "keywords": [
     "cors",
